PoC for direct Kafka